my-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: gmjeong-dev
spec: {}
status: {}
