my-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: gmjeong-dev
spec:
  ports:
  - name: service
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
status:
  loadBalancer: {}
